fixing z-index issue

--- a/Sites/Ovens/css/index.css
+++ b/Sites/Ovens/css/index.css
@@ -215,7 +215,7 @@ body{
   position: absolute;
   width: 100%;
   left: 0;
-  z-index: -1;
+  z-index: 0;
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
@@ -537,6 +537,7 @@ footer h3{
 }
 
 .main-content{
+  position: relative;
   z-index: 1;
 }
 
@@ -550,7 +551,7 @@ footer h3{
   float: left;
   bottom: 10%;
   left: 30%;
-  z-index: -1;
+  z-index: -2;
   width: 80%;
 
 }
@@ -890,7 +891,7 @@ footer h3{
     float: none;
     top:0%;
     left: 0%;
-    z-index: -1;
+    z-index: -2;
     width: 100%;
     height: 600px;
   
